[package]
name = "s2tw"
version = "1.0.14"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/s2tw"
homepage = "https://magiclen.org/s2tw"
keywords = ["chinese", "traditional", "simple", "conversion"]
categories = ["command-line-utilities"]
description = "A simple tool for converting Simple Chinese to Traditional Chinese(TW)."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = "3.1.6"
concat-with = "0.2"
terminal_size = "0.1"

[dependencies.path-absolutize]
version = "3"
features = ["lazy_static_cache"]

[dependencies.opencc-rust]
version = "1.1"
features = ["static-dictionaries"]