[package]
name = "s2tw"
version = "1.0.18"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/s2tw"
homepage = "https://magiclen.org/s2tw"
keywords = ["chinese", "traditional", "simple", "conversion"]
categories = ["command-line-utilities"]
description = "A simple tool for converting Simple Chinese to Traditional Chinese(TW)."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

[dependencies.opencc-rust]
version = "1.1"
features = ["static-dictionaries"]
